[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://src/Menu/SettingsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/UI.tres" type="Theme" id=4]
[ext_resource path="res://assets/backgrounds/park-min.jpg" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Asap-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/Menu/SceneSelect.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = 180.0
custom_constants/separation = 20

[node name="New" type="Button" parent="Options"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
text = "NEW GAME"

[node name="Load" type="Button" parent="Options"]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 30 )
text = "SCENE SELECT"

[node name="Extras" type="Button" parent="Options"]
margin_top = 100.0
margin_right = 150.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 30 )
text = "EXTRAS"

[node name="Settings" type="Button" parent="Options"]
margin_top = 150.0
margin_right = 150.0
margin_bottom = 180.0
rect_min_size = Vector2( 150, 30 )
text = "SETTINGS"

[node name="Quit" type="Button" parent="Options"]
margin_top = 200.0
margin_right = 150.0
margin_bottom = 230.0
rect_min_size = Vector2( 150, 30 )
text = "QUIT"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -119.0
margin_top = 20.0
margin_right = 119.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "LENT"
align = 1

[node name="Subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.5
margin_top = -110.0
margin_right = 126.5
margin_bottom = -91.0
text = "An Easter Story"
align = 1

[node name="version" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_bottom = 19.0
text = "v0.0.0 Demo "

[node name="credits" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -236.0
margin_top = -19.0
text = "Copyright Â© 2022 Jack Anderson "

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="SceneSelect" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="mouse_entered" from="Options/New" to="." method="_on_New_mouse_entered"]
[connection signal="pressed" from="Options/New" to="." method="_on_New_pressed"]
[connection signal="mouse_entered" from="Options/Load" to="." method="_on_Load_mouse_entered"]
[connection signal="pressed" from="Options/Load" to="." method="_on_Load_pressed"]
[connection signal="mouse_entered" from="Options/Extras" to="." method="_on_Extras_mouse_entered"]
[connection signal="mouse_entered" from="Options/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Options/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
